# NetworkMessengerServer

./: CMakeLists.txt  NetworkServer.sln  README.md
NetworkServer/: NetworkServer.vcxproj  NetworkServer.vcxproj.filters  Server.cpp  Server.h  main.cpp
NetworkServer/x64/Debug/: NetworkServer.exe.recipe  NetworkServer.ilk  vc143.idb
NetworkServer/x64/Debug/NetworkServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NetworkServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: Server.cpp  Server.h  main.cpp
